# deform-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
archive/: continuous deformation 2.maxpat  continuousdeformation.cpp  continuousdeformation4.cpp
source/lib.deform_tilde/: CMakeLists.txt  lib.deform_tilde.cpp
source/projects/deform_tilde/: CMakeLists.txt  deform_tilde.cpp  prototype.ipynb
source/projects/lib.deform_tilde/: CMakeLists.txt  lib.deform_tilde.cpp
source/projects/lib.deform_tilde/archive/: continuousdeformation.ipynb  continuousdeformation2.cpp  continuousdeformation3.cpp  continuousdeformation5.cpp  deform_float.cpp
testing/: deform_float.cpp  deform_float.ipynb
